metadata-retriever/metadata/objects/Lead_Account__c.object
<CustomObject>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone and Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Preferred_Test_Drive_Date__c</fullName>
        <label>Preferred Test Drive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Test_Drive_Time__c</fullName>
        <label>Preferred Test Drive Time</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <formula>VehicleRel_No__r.Purchase_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Intent__c</fullName>
        <label>Purchase Intent</label>
        <picklist>
            <picklistValues>
                <fullName>Empty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RORAC__c</fullName>
        <label>RORAC</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RV_Balloon_Amount__c</fullName>
        <formula>IF( !ISPICKVAL(Existing_Contract__r.Finance_Product_Type__c,&apos;Operating Lease&apos;), 
Existing_Contract__r.Residual__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RV/Balloon Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_No__c</fullName>
        <formula>VehicleRel_No__r.Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_Amount__c</fullName>
        <formula>IF( ISPICKVAL(Existing_Contract__r.Finance_Product_Type__c,&apos;Operating Lease&apos;), 
Existing_Contract__r.Residual__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OL Residual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Dealer__c</fullName>
        <formula>VehicleRel_No__r.Dealer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Leads_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT( Contact__r.Address_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Category__c</fullName>
        <formula>IF(
ISPICKVAL(Lead_Status__c,&apos;Lost&apos;), &apos;Closed Lost&apos;, 
IF(OR(
ISPICKVAL(Lead_Status__c,&apos;Closed&apos;),
ISPICKVAL(Lead_Status__c,&apos;Sold Vehicle&apos;),
ISPICKVAL(Lead_Status__c,&apos;Sold Vehicle and Finance&apos;),
ISPICKVAL(Lead_Status__c,&apos;Sold Finance&apos;),
ISPICKVAL(Lead_Status__c,&apos;Refinanced&apos;),
ISPICKVAL(Lead_Status__c,&apos;Policy Sold&apos;),
ISPICKVAL(Lead_Status__c,&apos;Settled&apos;)
), &apos;Closed Won&apos;, &apos;Open&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_BusinessUnit__c</fullName>
        <label>Offered Service</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Source__c</fullName>
        <label>Sub-Source</label>
        <picklist>
            <controllingField>Lead_Source__c</controllingField>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request a Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Models</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <formula>Contact__r.Suburb__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suburb</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Month__c</fullName>
        <formula>Existing_Contract__r.ContractTerm</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <label>Term (Months)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>IF( ISBLANK( Contact__c ) , &apos;&apos;, text(Contact__r.Salutation))</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <formula>Existing_Contract__r.Vehicle__r.VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleRel_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleRel No.</label>
        <referenceTo>Customer_Vehicle_Relationship__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make_Current__c</fullName>
        <label>Vehicle Make - Current</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFAROMEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTONMARTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALDENNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atkinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACURA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUGATTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueBogie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borcat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENTLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERPILLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADILLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEVROLET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORSASPECIALIZEDVEHICLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAIMLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make_Interest__c</fullName>
        <label>Vehicle Make Interest</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFAROMEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTONMARTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALDENNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atkinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACURA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUGATTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueBogie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borcat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENTLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERPILLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADILLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEVROLET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORSASPECIALIZEDVEHICLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAIMLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DiamondReo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <formula>TEXT(Existing_Contract__r.Vehicle__r.Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Current__c</fullName>
        <label>Vehicle Model - Current</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Interest__c</fullName>
        <label>Vehicle Model Interest</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <formula>Existing_Contract__r.Vehicle__r.Car_Model__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Need__c</fullName>
        <label>Vehicle Need</label>
        <picklist>
            <picklistValues>
                <fullName>Buy new vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy additional vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance existing vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace existing vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year_Current__c</fullName>
        <label>Vehicle Year - Current</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year_Interest__c</fullName>
        <label>Vehicle Year - Interest</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <formula>TEXT(Existing_Contract__r.Vehicle__r.YearOfManufacture__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <formula>IF( ISBLANK( Contact__c ) , &apos;&apos;, IF(ISBLANK(Contact__r.Phone),&apos;&apos;,Contact__r.Phone))</formula>
        <label>Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X24H_Untouched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/*
Created By PolarisYu 2013-8-27
Function: To mark those leads that are not changed for 24 hours
Used By: LeadHelper
*/</description>
        <label>*24H Untouched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X72H_Untouched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/*
Created By PolarisYu 2013-8-27
Function: To mark those leads that are not changed for 72 hours
Used By: LeadHelper
*/</description>
        <label>*72H Untouched</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead</label>
    <listViews>
        <fullName>All_Fleet_EOC_Leads</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Existing_Contract__c</columns>
        <columns>Nature_of_Request__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lead_Status__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Contact__c</columns>
        <columns>Assigned_Dealer__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Sub_BusinessUnit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead_Account__c.Fleet_Lead</value>
        </filters>
        <filters>
            <field>Existing_Contract__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Nature_of_Request__c</field>
            <operation>equals</operation>
            <value>End of Contract</value>
        </filters>
        <filters>
            <field>Lead_Source__c</field>
            <operation>equals</operation>
            <value>End of Contract</value>
        </filters>
        <label>All Fleet EOC Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Retail_EOC_Leads</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Existing_Contract__c</columns>
        <columns>Nature_of_Request__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Lead_Status__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Contact__c</columns>
        <columns>Assigned_Dealer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead_Account__c.Finance_Lead</value>
        </filters>
        <filters>
            <field>Existing_Contract__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Nature_of_Request__c</field>
            <operation>equals</operation>
            <value>End of Contract</value>
        </filters>
        <filters>
            <field>Lead_Source__c</field>
            <operation>equals</operation>
            <value>End of Contract</value>
        </filters>
        <label>All Retail EOC Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Leads</fullName>
        <columns>NAME</columns>
        <columns>Company_Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Sub_Source__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Lead_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Lost</value>
        </filters>
        <label>My Open Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Web_Leads_Unassigned</fullName>
        <columns>NAME</columns>
        <columns>Assigned_Dealer__c</columns>
        <columns>Company_Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LDCL_Lead_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Source_System__c</columns>
        <columns>Vehicle_Year_Current__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_System__c</field>
            <operation>equals</operation>
            <value>DLM</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>iuser</value>
        </filters>
        <label>Web Leads Unassigned</label>
    </listViews>
    <nameField>
        <displayFormat>Lead-{000000}</displayFormat>
        <label>Lead No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads</pluralLabel>
    <recordTypes>
        <fullName>Finance_Lead</fullName>
        <active>true</active>
        <description>Request for finance product information</description>
        <label>Finance Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fleet_Lead</fullName>
        <active>true</active>
        <description>Request for Fleet information</description>
        <label>Fleet Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Insurance_Lead</fullName>
        <active>true</active>
        <description>Request for Insurance information</description>
        <label>Insurance Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Parts_Lead</fullName>
        <active>true</active>
        <description>Request for Service booking or parts enquiry</description>
        <label>Service/Parts Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle_Lead</fullName>
        <active>true</active>
        <description>Request for information on specific vehicle/s</description>
        <label>Vehicle Lead</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assigned_Dealer_Must_Be_Filled</fullName>
        <active>true</active>
        <description>/*
Created By Polaris Yu 2013-9-2
Function: To make the &apos;Assigned Dealer&apos; field mandatory when the Lead Status change to &apos;Qualified&apos;
Used By: Finance Lead, Vehicle Lead, Service/Parts Lead
*/</description>
        <errorConditionFormula>AND(OR(RecordType.Name = &apos;Finance Lead&apos;
, RecordType.Name = &apos;Vehicle Lead&apos;
, RecordType.Name = &apos;Service/Parts Lead&apos;)
, ISBLANK(Assigned_Dealer__c)
, ISPICKVAL(Lead_Status__c, &apos;Qualified&apos;)
, $Profile.Name != &apos;IntegrationAPI&apos; 	
)</errorConditionFormula>
        <errorMessage>&apos;Assigned Dealer&apos; is required when lead status is changed to &apos;Qualified&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Can_Not_Be_Change</fullName>
        <active>true</active>
        <description>For fleet leads, this &quot;Close Date&quot; field can be changed manually after saving a record to Closed</description>
        <errorConditionFormula>AND( Status_Category__c = &apos;Closed Won&apos;,
  ISCHANGED( Close_Date__c ),
  RecordType.Name &lt;&gt; &apos;Fleet Lead&apos; )</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Close date can not be change without Fleet leads.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Individual_Or_Company_Must_Be_Filled</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISBLANK(Contact__c)
, ISBLANK(Company_Account__c)	
)</errorConditionFormula>
        <errorMessage>At least one customer individual or company linked to the lead customer .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lost_Reason_Must_Not_Be_Empty</fullName>
        <active>true</active>
        <description>Require the system to enter a value in the field &quot;Lost Reason&quot; during edit of a lead record to status &quot;Lost“.</description>
        <errorConditionFormula>AND( ISPICKVAL(Lead_Status__c  , &apos;Lost&apos;),
$Profile.Name != &apos;IntegrationAPI&apos;,
 ISPICKVAL( Lost_Reason__c , &apos;&apos;)  )</errorConditionFormula>
        <errorDisplayField>Lost_Reason__c</errorDisplayField>
        <errorMessage>Lost reason must not be empty</errorMessage>
    </validationRules>
</CustomObject>